# K.G.One

./: .gitignore  LICENSE  README.md  cleanup.bat  init-macos.sh  init.bat  init.sh  kgone-server.json  main.py  pyproject.toml  submodules.json
docs/: API.md  example-api-calls.md
foundation1_server/: server.py
mock-server/: main.py  pyproject.toml
services/: acestep_client.py  foundation1_client.py  model_manager.py  separator_runner.py
